k8s/secure-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: happy-days-helper
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 3.250.157.236.nip.io
    secretName: tls-secret
  rules:
  - host: 3.250.157.236.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: happy-days
            port:
              number: 80
